samples/_failures_safe/1761593768_1f812f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d08fdb9.c: In function ‘main’:
./samples/SAFE/__tmp_1d08fdb9.c:163:9: error: expected declaration or statement at end of input
  163 |         } else {
      |         ^
./samples/SAFE/__tmp_1d08fdb9.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d08fdb9.c:163:9: error: expected declaration or statement at end of input
